Fix clipping in Firefox

--- a/src/global.css
+++ b/src/global.css
@@ -34,7 +34,3 @@ html {
     }
   }
 }
-
-.giscus {
-  margin-top: 3.2rem;
-}
